re-build to allow for new file structure

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/jwfiedler/Sea_Level_Hawaii # Online location of your book
+  url: https://github.com/jwfiedler/SL_Hawaii # Online location of your book
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
