--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,11 @@ html:
 parse:
   myst_url_schemes: [mailto, http, https] # URI schemes that will be recognised as external URLs in Markdown links
 
+sphinx:
+  config:
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
+
 launch_buttons:
   # Binder button
   binderhub_url: "https://mybinder.org"  # The URL for your BinderHub deployment
