--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ _build/.DS_Store
 *.nc
 data/*.nc
 playground/
+notebooks/nonstationaryGEV/*.exe
+notebooks/nonstationaryGEV/*.dat
+notebooks/nonstationaryGEV/*.txt
