--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,14 @@ _build/.DS_Store
 data/*.nc
 playground/
 notebooks/nonstationaryGEV/*.exe
+notebooks/nonstationaryGEV/model_output/*/*
+notebooks/nonstationaryGEV/*.txt
 notebooks/nonstationaryGEV/*.dat
 
+/notebooks/nonstationaryGEV/model_output
+/notebooks/nonstationaryGEV/model_output
+/notebooks/nonstationaryGEV/model_output/14
+/notebooks/nonstationaryGEV/model_output
+notebooks/nonstationaryGEV/model_output/57/seasonal_params.json
+/notebooks/nonstationaryGEV/model_output
+/output/extremes
