--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: SLI39
+name: SLHawaii
 channels:
   - conda-forge
   - defaults
@@ -18,4 +18,3 @@ dependencies:
   - pyextremes
   - great_tables
   - selenium
-prefix: /Users/juliafiedler/anaconda3/envs/SLI39
