--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   deploy-book:
     runs-on: ubuntu-latest
+    environment: github-pages
     permissions:
       pages: write
       id-token: write
